# xed-sys

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  build.rs  generate.sh  xed.h
.github/workflows/: build-and-test.yml
build-tools/: Cargo.toml  build-all-triples  build-c2rust-bindings  xed.c
examples/: xed_min.rs
examples/xed-min/: Cargo.toml
examples/xed-min/src/: main.rs
src/: bindings.rs  c2rust.rs  lib.rs  xed-c2rust.rs  xed-static.c  xed_interface.rs  xed_version.rs
src/inline/: decoded_inst_api.rs  encode.rs  encoder_hl.rs  flags.rs  get_time.rs  iform_map.rs  inst.rs  mod.rs  state.rs  util.rs  xed3.rs
tests/: c2rust-miscompilation.rs  functions-exist.rs  version.rs
