[package]
name = "xed-sys"
version = "0.4.0"
authors = ["Phantomical", "Agustin Godnic"]
license = "Apache-2.0"
description = "Rust FFI bindings for Intel XED."
edition = "2018"
repository = "https://github.com/rust-xed/xed-sys"
readme = "README.md"
keywords = ["xed", "intel", "x86", "x86_64"]
categories = ["encoding", "external-ffi-bindings", "hardware-support", "parsing", "no_std"]

[badges]
appveyor = { repository = "rust-xed/xed-sys" }
travis-ci = { repository = "rust-xed/xed-sys" }

[features]
# Enable the enc2 module of XED.
#
# Each feature enables a version of enc2 for a different module and operand
# size. Note that attempting to enable multiple enc2 feature variants is not
# supported and will result in a compile error (instead of the link error it
# would normally emit).
enc2-m32-a32 = ["bindgen", "_internal-enc2"]
enc2-m64-a64 = ["bindgen", "_internal-enc2"]

# Generate bindings with bindgen at build-time instead of using the
# pregenerated bindings.
#
# This will be slower but is required for certain feature combinations.
bindgen = ["dep:bindgen"]

# Build xed with the enc2.
#
# This is an internal feature and you do not need to enable it manually.
_internal-enc2 = []

[dependencies]

[build-dependencies]
bindgen = { version = "0.69", optional = true, features = ["experimental"] }
cc = "1.0"
target-lexicon = "0.12"
